# aztec-assess

./: LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-pr.yml
backend/: .dockerignore  .env.example  .env.tester.example  Dockerfile  pyproject.toml
backend/adaptive_testing/: urls.py  views.py
backend/adaptive_testing/settings/: __init__.py  base.py  ci.py  testing.py
backend/adaptive_testing/tests/: test_route_gating.py  test_system_endpoints.py
backend/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/management/commands/: seed_signup_allowlist.py
backend/apps/accounts/migrations/: 0004_signupallowlist.py  0005_alter_signupallowlist_instructor_allowed_and_more.py
backend/apps/accounts/tests/: test_models.py  test_oauth.py  test_serializers.py  test_throttling.py  test_views.py
backend/apps/ai/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai/migrations/: 0001_initial.py
backend/apps/ai/services/: __init__.py  embeddings.py  gemini_client.py  material_processing.py  question_factory.py  rag.py  storage.py  text_extraction.py
backend/apps/ai/tests/: conftest.py  test_embeddings_service.py  test_gemini_client.py  test_material_processing_service.py  test_models.py  test_question_factory.py  test_rag_service.py  test_serializers.py  test_storage_paths.py  test_storage_service.py  test_text_extraction_service.py  test_views.py
backend/apps/courses/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/apps/courses/migrations/: 0001_initial.py  0002_add_topic.py
backend/apps/courses/tests/: __init__.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
backend/apps/quizzes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/quizzes/migrations/: 0001_initial.py  0002_add_question_topics.py  0003_adaptive_bkt_irt.py  0003_question_ai_review.py
backend/apps/quizzes/services/: __init__.py  adaptive_state.py  attempts.py  bkt.py  init.py  irt.py  selection.py
backend/apps/quizzes/tests/: test_adaptive_integration.py  test_adaptive_state.py  test_attempts_service.py  test_bkt.py  test_irt.py  test_models.py  test_selection.py  test_serializers.py  test_utils.py  test_views.py
docs/: tester-environment-runbook.md
frontend/: .dockerignore  .env.example  .env.tester.example  Dockerfile  auth-callback.html  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  auth-callback.ts  index.css  main.tsx
frontend/src/api/: axios.ts  endpoints.ts  interceptors.ts  useAuthInterceptors.ts
frontend/src/components/: ProtectedRoute.tsx  PublicRoute.tsx  Toast.tsx
frontend/src/config/: msalConfig.ts
frontend/src/context/: AuthContext.tsx  CourseRoleContext.tsx  ProfileRoleContext.tsx
frontend/src/test/: AppRoutes.test.tsx  AuthContext.test.tsx  CourseCreationPage.test.tsx  CourseDetailPage.test.tsx  DashboardPage.test.tsx  InstructorDashboardPage.test.tsx  InstructorQuizPage.test.tsx  JoinCoursePage.test.tsx  LogInPage.test.tsx  Profile.test.tsx  ProtectedRoute.test.tsx  PublicRoute.test.tsx  RoleSelectionPage.test.tsx  Sidebar.test.tsx  SignUpPage.test.tsx  utils.tsx  (+5 more)
(+55 files in other folders)
